update packages and docs, switch to yarn

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,35 +1,35 @@
-@import "_config/_variables";
-@import "_config/_mixins";
+@import '_config/_variables';
+@import '_config/_mixins';
 
-@import "base/_reset";
-@import "base/_typography";
-@import "base/_buttons";
-@import "base/_chips";
-@import "base/_forms";
-@import "base/_labels";
-@import "base/_media";
-@import "base/_page";
+@import 'base/_reset';
+@import 'base/_typography';
+@import 'base/_buttons';
+@import 'base/_chips';
+@import 'base/_forms';
+@import 'base/_labels';
+@import 'base/_media';
+@import 'base/_page';
 
-@import "components/_accordions";
-@import "components/_carousels";
-@import "components/_counters";
-@import "components/_cursors";
-@import "components/_drawers";
-@import "components/_dropdowns";
-@import "components/_listboxes";
-@import "components/_marquees";
-@import "components/_cookie-bar";
-@import "components/_promo-banner";
-@import "components/_header";
-@import "components/_mega-nav";
-@import "components/_footer";
-@import "components/_cart";
-@import "components/_theme-switch";
+@import 'components/_accordions';
+@import 'components/_carousels';
+@import 'components/_counters';
+@import 'components/_cursors';
+@import 'components/_drawers';
+@import 'components/_dropdowns';
+@import 'components/_listboxes';
+@import 'components/_marquees';
+@import 'components/_cookie-bar';
+@import 'components/_promo-banner';
+@import 'components/_header';
+@import 'components/_mega-nav';
+@import 'components/_footer';
+@import 'components/_cart';
+@import 'components/_theme-switch';
 
-@import "modules/_hero";
-@import "modules/_divider";
-@import "modules/_collection";
-@import "modules/_filters";
-@import "modules/_product";
+@import 'modules/_hero';
+@import 'modules/_divider';
+@import 'modules/_collection';
+@import 'modules/_filters';
+@import 'modules/_product';
 
-@import "_shame";
+@import '_shame';
